Quake/common.h

//============================================================================

typedef struct vec_header_t
{
	size_t capacity;
	size_t size;
} vec_header_t;
void Vec_Grow (void **pvec, size_t element_size, size_t count);
void Vec_Append (void **pvec, size_t element_size, const void *data, size_t count);
void Vec_Clear (void **pvec);
void Vec_Free (void **pvec);
extern float (*BigFloat) (float l);
extern float (*LittleFloat) (float l);
void		Info_Enumerate (const char *info, void (*cb) (void *ctx, const char *key, const char *value), void *cbctx);
/* locale-insensitive natural string comparison function */
int q_strnaturalcmp (const char *s1, const char *s2);
/* copies in to out, highlighting all occurrences of substr using the colored charset */
char *COM_TintSubstring (const char *in, const char *substr, char *out, size_t outsize);
/* converts a string from Quake encoding to UTF-8; returns the number of written characters (including the NUL terminator)
if a valid output buffer is provided, or the total amount of space necessary if dst is NULL and maxbytes is 0 */
size_t UTF8_FromQuake (char *dst, size_t maxbytes, const char *src);