rust/quake-ctest/include/c_ref_prelude.h

#define q_strlcat			  c_ref_q_strlcat
#define Cvar_FindVar		 c_ref_Cvar_FindVar
#define Cvar_FindVarAfter	 c_ref_Cvar_FindVarAfter
#define cmd_alias	 c_ref_cmd_alias
#define cmd_functions c_ref_cmd_functions
#define Cmd_TokenizeString	 c_ref_Cmd_TokenizeString
#define Cmd_AddArg			 c_ref_Cmd_AddArg
#define Cmd_FindCommand		 c_ref_Cmd_FindCommand
#define Cmd_IsReservedName	 c_ref_Cmd_IsReservedName
void Con_Printf (const char *fmt, ...);
FUNC_NORETURN void Host_Error (const char *error, ...);
#define PR_GetString          c_ref_PR_GetString
#define S_StartSound		 c_ref_S_StartSound
#define S_LocalSound		 c_ref_S_LocalSound
void					Con_SafePrintf (const char *fmt, ...);
extern double realtime;
/* ---- Phase 7 M9f (T9f.0): the pr_ext.c oracle's renderer-facing slice ----
 *
 * stubs/pr_ext_ref.c composes Quake/pr_ext.c into this link (the composing-TU
 * pattern; see that file's header). pr_ext.c reaches a handful of glquake.h /
 * draw.h declarations the real headers cannot supply here, because glquake.h
 * pulls vulkan/vulkan.h and tasks.h. Two kinds of declaration follow, and they
 * are labelled individually:
 *
 *   FAITHFUL   -- character-for-character the real declaration; a Phase 8 port
 *                 can trust it.
 *   COMPILE-ONLY -- a minimal stand-in with the right *spelling* but not the
 *                 real layout. Every consumer of one is Phase 8 renderer code
 *                 (PF_cl_draw*, DrawQC_CharacterQuad, PF_getsurface*) that no
 *                 differential drives and that nothing in this link calls, and
 *                 nothing here takes sizeof() of a COMPILE-ONLY struct.
 *
 * Definitions for the objects declared here live in stubs/pr_ext_ref.c as link
 * doubles, not in a real renderer TU.
 */

/* FAITHFUL: glquake.h:41, :107, :636, :639 */
extern int glwidth, glheight;
typedef struct VkCommandBuffer_T *VkCommandBuffer;
typedef struct VkRenderPass_T	 *VkRenderPass;
typedef struct vulkan_pipeline_s
{
	VkPipeline				 handle;
	vulkan_pipeline_layout_t layout;
} vulkan_pipeline_t;
/* COMPILE-ONLY: glquake.h:339-349. pr_ext.c only ever dereferences `cb`; the
 * real struct also carries `canvastype current_canvas`, `uint32_t
 * vbo_indices[MAX_BATCH_SIZE]` and `unsigned int num_vbo_indices`, which are
 * omitted because MAX_BATCH_SIZE and canvastype are renderer-private and
 * nothing here takes sizeof (cb_context_t). */
typedef struct cb_context_s
{
	VkCommandBuffer	  cb;
	VkRenderPass	  render_pass;
	int				  render_pass_index;
	int				  subpass;
	vulkan_pipeline_t current_pipeline;
} cb_context_t;
void	Draw_Pic (cb_context_t *cbx, float x, float y, qpic_t *pic, float alpha, qboolean alpha_blend);
/* cl_main.c:1168 is the one SDL call in the client stratum (the `copy` of a
 * console link). SDL3's own header is off-limits here, so the prototype is
 * spelled out and stubs.c owns the symbol. */
int SDL_SetClipboardText (const char *text);
#define cl                                c_ref_cl
#define cls                               c_ref_cls
/* quakedef.h:238-251 */
typedef enum
{
	CANVAS_NONE,
	CANVAS_DEFAULT,
	CANVAS_CONSOLE,
	CANVAS_MENU,
	CANVAS_SBAR,
	CANVAS_WARPIMAGE,
	CANVAS_CROSSHAIR,
	CANVAS_BOTTOMLEFT,
	CANVAS_TOPLEFT,
	CANVAS_BOTTOMRIGHT,
	CANVAS_TOPRIGHT,
	CANVAS_CSQC,
	CANVAS_INVALID = -1
} canvastype;
void Draw_Character (cb_context_t *cbx, float x, float y, int num);						 /* draw.h:46 */
void Draw_ConsoleBackground (cb_context_t *cbx);										 /* draw.h:50 */
void Draw_Pic (cb_context_t *cbx, float x, float y, qpic_t *pic, float alpha, qboolean alpha_blend); /* draw.h:47 */
void Draw_Fill (cb_context_t *cbx, float x, float y, float w, float h, int c, float alpha); /* draw.h:52 */
void Draw_String (cb_context_t *cbx, float x, float y, const char *str);				 /* draw.h:54 */
void GL_SetCanvas (cb_context_t *cbx, canvastype newcanvas);							 /* draw.h:64 */
void GL_SetCanvasColor (float r, float g, float b, float a);							 /* draw.h:65 */
extern double host_rawframetime; /* quakedef.h:406 */
qboolean Sys_Explore (const char *path); /* sys.h:100 */
void M_Menu_Main_f (void); /* menu.h:74 */
void S_LocalSound (const char *name); /* q_sound.h:184 */